@@ -8,7 +8,8 @@ Fixed reset / NMI handling for IDSA V-1
 Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
 Fix Rescue 911 (and maybe more: SFII, WCS, Shaq, mZOIS?) DMD brightness level mapping regression
 Improved Punky Willy sound emulation
-Made speech work for Taito Vegas and Lady Luck
+Fixed sound for Taito Sure Shot and Mr. Black (NMI line needs to be pulsed for these games, Sure Shot still sounds awful)
+Made speech work for Taito Vegas and Lady Luck - working around a strange PIA issue
 
 *** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren
 New:
